--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,338 @@
 
 <body>
 
+	<nav class="mob-mnu d-block d-md-none">
+		<div class="mob-mnu__close">X</div>
+		<div class="mob-mnu-flex">
+			<div class="mob-mnu-flex__content">
+				<ul class="mob-mnu-list">
+					<li class="mob-mnu-list__item"><a href="#top">Главная</a></li>
+					<li class="mob-mnu-list__item"><a href="#prog1" class="anchor">Карпаты</a></li>
+					<li class="mob-mnu-list__item"><a href="#prog2" class="anchor">Болгария</a></li>
+					<li class="mob-mnu-list__item"><a href="#prog3" class="anchor">Киев</a></li>
+					<li class="mob-mnu-list__item"><a href="#gallery" class="anchor">Фотогалерея</a></li>
+					<li class="mob-mnu-list__item"><a href="#contacts" class="anchor">Контакты</a></li>
+				</ul>
+				<div class="mob-mnu-phone">
+					<a href="tel:+380639916095" class="mob-mnu-phone__link">+38(063) 991 60 95</a>
+					<a href="tel:+380979731323" class="mob-mnu-phone__link">+38(097) 973 13 23</a>
+				</div>
+			</div>
+		</div>
+	</nav>
+
+	<header class="head">
+		<video id="mov" class="video" preload="true" autoplay loop muted>
+			<source src="video/bgvideo.mp4" type='video/mp4'>
+			<source src="video/bgvideo.ogv" type='video/ogg'>
+			<source src="video/bgvideo.webm" type='video/webm'>
+		</video>
+		<nav class="nav">
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-auto">
+						<img src="img/logo.png" class="nav-logo" alt="logo">
+					</div>
+					<div class="col d-none d-md-block">
+						<ul class="nav-list">
+							<li class="nav-list__item"><a href="#top">Главная</a></li>
+							<li class="nav-list__item"><a href="#prog1" class="anchor">Карпаты</a></li>
+							<li class="nav-list__item"><a href="#prog2" class="anchor">Болгария</a></li>
+							<li class="nav-list__item"><a href="#prog3" class="anchor">Киев</a></li>
+							<li class="nav-list__item"><a href="#gallery" class="anchor">Фотогалерея</a></li>
+							<li class="nav-list__item"><a href="#contacts" class="anchor">Контакты</a></li>
+						</ul>
+					</div>
+					<div class="col-auto">
+						<div class="nav-phone d-none d-xs-block">
+							<a href="tel:+380639916095" class="nav-phone__link">+38(063) 991 60 95</a>
+							<a href="tel:+380979731323" class="nav-phone__link">+38(097) 973 13 23</a>
+						</div>
+						<div class="mob-mnu__btn d-block d-md-none">
+							<img src="img/menu.svg" width="24" height="24" alt="menu">
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
+		<div class="head-flex">
+			<div class="head-flex__content">
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<h1 class="head-ttl">Танцевальный лагерь 2019 от 3000 грн <span>для детей от 5 до 17 лет</span></h1>
+						</div>
+					</div>
+					<div class="row justify-content-center">
+						<div class="col-md-3 col-sm-4">
+							<div class="head-item">
+								<div class="head-item__numb">1</div>
+								<p class="head-item__txt">За 7 лет с нами отдохнуло более 3000 детей</p>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-4">
+							<div class="head-item">
+								<div class="head-item__numb">2</div>
+								<p class="head-item__txt">3 заезда за лето 2019. Места ограничены</p>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-4">
+							<div class="head-item head-item_last">
+								<div class="head-item__numb">3</div>
+								<p class="head-item__txt">Танцевальные лагеря в Карпатах, Болгарии и Киеве</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="head-foot">
+			<a href="#first" class="head-foot__link anchor">Подробнее</a>
+		</div>
+	</header>
+
+	<section class="first" id="first">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h3 class="first-ttl">Танцевальные лагеря с командой “Dream Team” - это:</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="img/first_img1.jpg" class="img-r first-img" alt="img">
+					<p class="first-txt">Безопасность и комфорт ребенка</p>
+					<ul class="first-list">
+						<li class="first-list__item">Территория лагеря находится под круглосуточной охраной</li>
+						<li class="first-list__item">Круглосуточная медицинская помощь</li>
+						<li class="first-list__item">Ваш ребенок всегда под присмотром вожатых и преподавателей</li>
+						<li class="first-list__item">Проживание в 2-4 местных комфортных номерах</li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					<img src="img/first_img2.jpg" class="img-r first-img" alt="img">
+					<p class="first-txt">Насыщенные программы лагерей</p>
+					<ul class="first-list">
+						<li class="first-list__item">Ежедневная физ. подготовка и спортивные мероприятия</li>
+						<li class="first-list__item">Танцевальные мастер-классы и актерское мастерство</li>
+						<li class="first-list__item">Экскурсии, прогулки и купание в бассейне</li>
+						<li class="first-list__item">Дискотеки и другие развлечения</li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					<img src="img/first_img3.jpg" class="img-r first-img" alt="img">
+					<p class="first-txt">Здоровое питание</p>
+					<ul class="first-list first-list_last">
+						<li class="first-list__item">Сбалансированное питание до 5 раз в день придаст сил и энергии, чтобы успеть все в насыщенной программе лагеря</li>
+						<li class="first-list__item">Каждый день меню предусматривает рацион из белков, жиров, углеводов и клетчатки для здорового пищеварения</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="prog1" class="program program_gray program_bgline">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<h3 class="program-ttl">Программы<br class="d-block d-sm-none"> и цены</h3>
+					<p class="program-txt">Наша команда 7 лет подряд организовывает танцевальные лагеря. Каждый раз делаем лучше и лучше.  В этот раз, мы подготовили для Вашего ребенка 3 варианта отдыха с насыщенными и интересными программами</p>
+				</div>
+			</div>
+			<div class="row align-items-center">
+				<div class="col-lg-7 col-md-6">
+					<div class="program-block">
+						<h4 class="program-block__ttl">Карпаты, Ворохта</h4>
+						<p class="program-block__txt">Ворохта - курортный городок в самом сердце Карпат. Чистый воздух, природа, горы и прекрасная летняя погода</p>
+						<p class="program-block__item date">Даты: с 1 по 8 августа 2019 года</p>
+						<p class="program-block__item price">Цена: 6999 грн до 31.04.19</p>
+						<p class="program-block__item last">Осталось мест: 12</p>
+						<p class="program-block__item include">В цену включены:</p>
+						<ul class="program-block-list">
+							<li class="program-block-list__item">Трансфер Киев-Ивано-Франковск, Ивано-Франковск-Ворохта, Ворохта-Ивано-Франковск, Ивано-Франковск-Киев</li>
+							<li class="program-block-list__item">Танцевальный мастер-классы</li>
+							<li class="program-block-list__item">Экскурсии и развлечения</li>
+							<li class="program-block-list__item">3-х разовое питание</li>
+							<li class="program-block-list__item">Проживание в комфортных номерах на 2-4 ребенка</li>
+						</ul>
+						<a href="#program1" class="program-block__link fancybox">Смотреть программу по дням</a>
+						<a href="#modal" class="program-block__btn modal_event" data-place="Карпаты, Ворохта">Обсудить детали с администратором</a>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-6">
+					<img src="img/program1.jpg" class="img-r program-block__img" alt="Карпаты, Ворохта">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="prog2" class="program">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-lg-7 col-md-6">
+					<div class="program-block">
+						<h4 class="program-block__ttl">Болгария, г. Албена</h4>
+						<p class="program-block__txt">Заповедник Балтата в лучшем курортном городе Албена - экологически чистый воздух гор и моря</p>
+						<p class="program-block__item date">Даты: с 15 по 24 июля 2019 года</p>
+						<p class="program-block__item price">Цена: 363€</p>
+						<p class="program-block__item last">Осталось мест: 9</p>
+						<p class="program-block__item include">В цену включены:</p>
+						<ul class="program-block-list">
+							<li class="program-block-list__item">Переезд комфортабельными автобусами и авиа</li>
+							<li class="program-block-list__item">Проживание в комфортных номерах на 2-4 ребенка</li>
+							<li class="program-block-list__item">Здоровое питание по системе All Inclusive</li>
+							<li class="program-block-list__item">Танцевальный мастер-классы, экскурсии и развлечения</li>
+							<li class="program-block-list__item">Международный творческий фестиваль</li>
+						</ul>
+						<a href="#modal" class="program-block__btn modal_event" data-place="Болгария, г. Албена">Обсудить детали с администратором</a>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-6">
+					<img src="img/program2.jpg" class="img-r program-block__img" alt="Болгария, г. Албена">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="prog3" class="program program_gray">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-lg-7 col-md-6">
+					<div class="program-block">
+						<h4 class="program-block__ttl">Киев, Виноградарь</h4>
+						<p class="program-block__txt">Детский лагерь летнего пребывания в школе танцев “Dream Team” по ул. Межевая, 18 (Виноградарь)</p>
+						<p class="program-block__item date">Даты и цены:</p>
+						<p class="program-block__item price">- с 3 по 28 июня (20 дней) - 3000 грн<br>- с 1 по 26 июля (20 дней) - 3000 грн<br>- 29 июля - 16 августа (15 дней) - 2250 грн</p>
+						<p class="program-block__item last">Осталось мест: 5</p>
+						<p class="program-block__item include">В цену включены:</p>
+						<ul class="program-block-list">
+							<li class="program-block-list__item">Пребывание ребенка в лагере с 10:00-15:00 (пн-пт)</li>
+							<li class="program-block-list__item">Развивающие занятия, игры и квесты</li>
+							<li class="program-block-list__item">Просмотр развивающих фильмов и мультфильмов</li>
+							<li class="program-block-list__item">Прогулки, физ. подготовка, танцы и мастер-классы</li>
+							<li class="program-block-list__item">Занятия английским языком</li>
+						</ul>
+						<a href="#program3" class="program-block__link fancybox">Смотреть режим дня</a>
+						<a href="#modal" class="program-block__btn modal_event" data-place="Киев, Виноградарь">Обсудить детали с администратором</a>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-6">
+					<img src="img/program3.jpg" class="img-r program-block__img" alt="Киев, Виноградарь">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="gallery" class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h3 class="gallery-ttl">Отдыхаем, танцуем, выступаем и круто проводим каждую минуту...</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-6 col-md">
+					<img src="img/gallery/1.jpg" class="img-r" alt="img" style="margin-bottom: 20px">
+				</div>
+				<div class="col-6 col-md">
+					<img src="img/gallery/2.jpg" class="img-r" alt="img" style="margin-bottom: 20px">
+				</div>
+				<div class="col-6 col-md">
+					<img src="img/gallery/3.jpg" class="img-r" alt="img" style="margin-bottom: 20px">
+				</div>
+				<div class="w-100 d-none d-md-block"></div>
+				<div class="col-6 col-md">
+					<img src="img/gallery/4.jpg" class="img-r" alt="img">
+				</div>
+				<div class="col-6 col-md">
+					<img src="img/gallery/5.jpg" class="img-r" alt="img">
+				</div>
+				<div class="col-6 col-md">
+					<img src="img/gallery/6.jpg" class="img-r" alt="img">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer id="contacts" class="foot">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h3 class="foot-ttl">Контакты</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm">
+					<h4 class="foot-subttl">Адрес</h4>
+					<p class="foot-addr">г. Киев, ул. Маршала Малиновского, 24/10</p>
+					<p class="foot-addr">г. Киев, ул. Межевая, 18</p>
+				</div>
+				<div class="col-sm">
+					<h4 class="foot-subttl">Телефоны</h4>
+					<a href="tel:+380639916095" class="foot-tel">+38(063) 991 60 95</a>
+					<a href="tel:+380979731323" class="foot-tel">+38(097) 973 13 23</a>
+				</div>
+				<div class="col-sm">
+					<h4 class="foot-subttl">Соц. сети</h4>
+					<div class="foot-soc">
+						<a href="https://www.facebook.com/dreamteamkievds/" target="_blank" class="foot-soc__link"><img src="img/facebook.svg" width="24" height="24" alt="facebook"></a>
+						<a href="https://www.instagram.com/dreamteamkiev/" target="_blank" class="foot-soc__link"><img src="img/instagram.svg" width="24" height="24" alt="instagram"></a>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<p class="cprt">2019 © Dream-team Dance School. Все права защищены.</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<div class="d-none">
+		<div id="modal" class="modal">
+			<form action="mail.php" post="POST" class="form_check modal-form">
+				<input type="hidden" name="title" value="Получить консультацию">
+				<input type="hidden" name="place" class="place">
+				<h3 class="modal-form__ttl">Получить консультацию</h3>
+				<p class="modal-form__txt">Заполните форму ниже, чтобы получить подробную консультацию от нашего специалиста</p>
+				<div class="rline">
+					<input type="text" name="name" class="rfield modal-form__input" placeholder="Ваше имя">
+				</div>
+				<div class="rline">
+					<input type="text" name="phone" class="rfield phonefield modal-form__input" placeholder="Ваш телефон">
+				</div>
+				<div class="clearfix"></div>
+				<button type="submit" class="btnsubmit modal-form__btn">Получить консультацию</button>
+			</form>
+		</div>
+		<div id="program1" class="modal-program">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7">
+						<h3 class="modal-program__ttl">Программа на 1- 8 августа 2019</h3>
+						<p class="modal-program__txt"><span>1.08.19</span> Прибытие тур-группы поездом в Ивано-Франковск. Переезд автобусом через Яремче до горного курорта "Ворохта", поселение в отель, досуг, праздничная дискотека<br><span>2.08.19 - 7.08.19</span> Танцевальные мастер-классы, актерское мастерство, физ. подготовка.<br><span>3.08.19</span> выездная экскурсия в Верховину - центр Гуцульщины (музей быта и музыкальных инструментов, катание на лошадях).<br><span>6.08.19р.</span> “Яблуниця”: долина "Перцы" и туристический курорт "Буковель". На досуге предусмотрены: купание в бассейне, пешеходная экскурсия по Ворохте, утренние походы за  грибами и ягодами, катание на лошадях, ловля форели, пикник на лесной поляне, дискотека и другие развлечения.<br><span>8.08.19</span> - выезд тур-группы автобусом в Ивано-Франковск, отъезд поездом в Киев. В программе возможны изменения по обращению руководства группы и учитывая погодные и другие факторы.</p>
+					</div>
+					<div class="col-md-5">
+						<img src="img/program1-1.jpg" class="img-r program-block__img" alt="Карпаты, Ворохта">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="program3" class="modal-program">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7">
+						<h3 class="modal-program__ttl">Режим дня</h3>
+						<p class="modal-program__txt"><span>10.00</span> Встреча детей<br><span>10.15-11.00</span> Прогулка<br><span>11.00-12.00</span> Развивающие занятия<br><span>12.00-13.00</span> Просмотр познавательного фильма / мультфильма<br><span>13.00-13.30</span> Ланч (бутерброд, фрукты из дома)<br><span>13.30-14.30</span> Танцы / Развивающее занятие / Рисование / Мастер-класс<br><span>14.30-15.00</span> Развлекательное занятия / Физическая подготовка</p>
+					</div>
+					<div class="col-md-5">
+						<img src="img/program3-1.jpg" class="img-r program-block__img" alt="Киев, Виноградарь">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 
